# pydew-valley-uzh

./: .gitignore  CONTRIBUTING.md  README.md  code_architecture.md  formatlint.py  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  token_data.json  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  enhancement.yml  feature-request.yml
.github/PULL_REQUEST_TEMPLATE/: code_pr_template.md  docs_pr_template.md  pr_revert_template.md
.github/workflows/: lint-and-test.yml  main.yml
data/: dialogues.json  save.json
data/database/: database.db
data/maps/: farm.tmx  farm_new.tmx  farm_new_BCKP.tmx  forest.tmx  main.tmx  minigame.tmx  town.tmx
data/settings/: default keybinds.json  keybinds.json  pygame_keys.json
data/tilesets/: Barn structures.tsx  Basic_Furniture.tsx  Bush_Tiles.tsx  Chest.tsx  Darker_Grass_Hill_Tiles_Slopes_v2.tsx  Darker_Grass_Hills_Tiles_v2.tsx  Darker_Grass_Tile_Layers.tsx  Grass_Tile_layers2.tsx  Grass_tiles_v2.tsx  Interaction.tsx  NPCs.tsx  Paths.tsx  Stone_Path.tsx  Water_1.tsx  Water_troughs.tsx  Wooden_Bridge_v2.tsx  Wooden_House_Roof_Tileset.tsx  Wooden_House_Walls_Tileset_modified.tsx  fence_tileset.tsx  objects.tsx  trees and bushes.tsx  trees_and_bushes.tsx
docs/: CODE_OF_CONDUCT.md
src/: __init__.py  camera.py  colors.py  controls.py  dialog.py  enums.py  events.py  exceptions.py  groups.py  import_checks.py  level.py  main_menu.py  map_objects.py  mapobjects.py  menu.py  menus.py  new_enums.py  overlay.py  pause_menu.py  savefile.py  settings.py  settings_menu.py  settingsmenu.py  shop.py  sky.py  soil.py  sprites.py  support.py  timer.py  transition.py  utils.py  warnings.py
src/camera/: __init__.py  camera.py  camera_target.py  quaker.py  zoom_area.py  zoom_manager.py
src/gui/: __init__.py  abstract_menu.py  components.py  description.py  general_menu.py  health_bar.py  scene_anim.py  scene_animation.py  setup.py
src/gui/interface/: __init__.py  dialog.py  emotes.py  emotes_base.py  indicators.py
src/gui/menu/: __init__.py  abstract_menu.py  components.py  description.py  general_menu.py
src/npc/: __init__.py  behaviour_base.py  chicken.py  cow.py  dialog.py  emotes.py  npc.py  npc_base.py  npc_behaviour.py  setup.py  utils.py
src/npc/bases/: __init__.py  ai_behaviour.py  animal.py  chicken_base.py  cow_base.py  npc_base.py
src/npc/behaviour/: __init__.py  ai_behaviour.py  ai_behaviour_base.py  ai_behaviour_tree_base.py  chicken_behaviour_tree.py  cow_behaviour_tree.py  cow_flee_behaviour_tree.py  npc_behaviour_tree.py
src/overlay/: clock.py  fast_forward.py  fps.py  game_time.py  overlay.py  sky.py  soil.py  transition.py
src/savefile/: __init__.py  savefile.py  tile_info.py
src/screens/: game_map.py  inventory.py  level.py  menu.py  menu_main.py  menu_pause.py  menu_round_end.py  menu_settings.py  pause.py  player_task.py  settings.py  shop.py  switch_to_outgroup_menu.py
src/screens/minigames/: base.py  cow_herding.py  cow_herding_behaviour.py  cow_herding_overlay.py  gui.py
src/sprites/: base.py  character.py  drops.py  entity.py  particle.py  plant.py  player.py  setup.py  tree.py  water_drop.py
src/sprites/entities/: character.py  entity.py  player.py  trader.py
src/sprites/objects/: bed.py  berry_bush.py  hill.py  plant.py  rock.py  tree.py
src/tests/: test_event_expansion.py  test_utils.py
